--- a/src/org/majki/intellij/ldapbrowser/dialog/LdapAttributeValuePanel.form
+++ b/src/org/majki/intellij/ldapbrowser/dialog/LdapAttributeValuePanel.form
@@ -20,7 +20,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="6d577" class="javax.swing.JLabel">
+          <component id="6d577" class="javax.swing.JLabel" binding="attributeLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="157" height="12"/>
@@ -51,7 +51,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="2f8b0" class="javax.swing.JLabel">
+          <component id="2f8b0" class="javax.swing.JLabel" binding="valueLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
